--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -160,7 +160,7 @@
 \pagestyle{empty}
 %\includepdf[pages=-]{titlepage.pdf}
 
-\blankpage{}
+%\blankpage{}
 
 % Admission.
 %\input{admission.tex}
@@ -172,10 +172,10 @@
 % Summaries.
 \selectlanguage{english}
 %\input{summary/english.tex}
-\clearpage
+%\clearpage
 \selectlanguage{dutch}
 %\input{summary/dutch.tex}
-\clearpage
+%\clearpage
 \selectlanguage{english}
 
 % Extended abstracts.
@@ -187,11 +187,11 @@
 % Vulgarising summary.
 \pagestyle{plain}
 %\input{summary/vulgarising.tex}
-\clearpage
+%\clearpage
 
 \pagestyle{fancy}
 
-\blankpage{}
+%\blankpage{}
 
 % ToC.
 %\tableofcontents
@@ -199,15 +199,15 @@
 % Corpus.
 \mainmatter
 
-%\input{glossary.tex}
+\input{glossary.tex}
 \clearpage
-%\input{introduction.tex}
+\input{introduction.tex}
 \clearpage
 %\input{software-engineering.tex}
 \clearpage
 %\input{related-work.tex}
 \clearpage
-\input{velocity.tex}
+%\input{velocity.tex}
 \clearpage
 %\input{evaluation.tex}
 \clearpage
