--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -1,12 +1,15 @@
 % !TeX root = thesis.tex
 
-\chapter{Related work [TODO REVISE]}
-\label{ch:related-work}
-In the previous chapter, the paramount importance of frequently integrating one's changes into the upstream repository was emphasised. Additionally, \CI{} was introduced as both a practice and a tool to facilitate this often complex and time-consuming process. \CI{} is, however, not the golden bullet for software engineering, as there is a flip side to applying this practice. After every integration, all of the unit and regression tests in the test suite must be executed to ensure that the integration was successful and that no new bugs have been introduced. As the project evolves, the size of the codebase increases and consequently the amount of tests will increase as well in order to maintain a sufficiently high coverage level. An increase in the size of the test suite will inevitably lead to an increase in test duration \cite{evaluationoftestsuiteminimization}, which imposes an issue of scaling. Walcott, Soffa and Kapfhammer illustrate the magnitude of this problem by providing an example of a codebase consisting of 20.000 lines, for which the tests require up to seven weeks to complete \cite{10.1145/1146238.1146240}.\\
+WIJ-ificeren!!!!!!!!!!!!!!!!!!!!!
 
+\chapter{Related work}
+\label{ch:related-work}
+The previous chapter has stressed the paramount importance of frequently integrating one's changes into the upstream repository. This process can be a complex and lengthy operation. As a result, software engineers have sought and found ways to automate this task. These solutions and practices embody \acrfull{ci}. However, \acrshort{ci} is not the golden bullet for software engineering, as there is a flip side to applying this practice. After every integration, the entire test suite must be executed to ensure that no regression has been introduced. As the project evolves and the size of the codebase increases, the number of test cases will increase accordingly to preserve a sufficiently high coverage level \cite{evaluationoftestsuiteminimization}. Walcott, Soffa and Kapfhammer illustrate the magnitude of this problem by providing an example of a project consisting of \SI{20000}{} lines of code. The test suite of this project requires up to seven weeks to complete \cite{10.1145/1146238.1146240}.\\
+
+TODO DEZE PARAGRAAF
 \noindent Fortunately, multiple developers and researchers have found some techniques that can be used to address the scalability issues of growing test suites. The techniques currently known to literature can be classified in three categories. Developers can either apply \emph{\tsm{}}, \emph{\tcs{}} or \emph{\tcp{}} \cite{evaluationoftestsuiteminimization}. All three techniques are applicable to any test suite, however there is a trade-off to be made. Depending on which technique is chosen, it will either have a major impact on the duration of the test suite execution in exchange for a reduced test coverage level, or it will result in a higher test adequacy.\\
 
-\noindent In the following sections, the details of these three approaches will be discussed and accompanying algorithms will be provided. Since the approaches share common ideas, the algorithms can (albeit with minor modifications) be applied to all approaches. The final section will investigate the adoption and integration of these techniques and algorithms in existing prominent software testing frameworks.
+\noindent The following sections will discuss these three approaches in more detail and provide accompanying algorithms. Because the techniques are very similar, the corresponding algorithms can (albeit with minor modifications) be used interchangeably for every approach. The final section of this chapter will investigate the adoption and integration of these techniques in modern software testing frameworks.
 
 \input{related-work/approaches.tex}
 \newpage
