--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -201,19 +201,19 @@
 
 \input{glossary.tex}
 \clearpage
-\input{introduction.tex}
+%\input{introduction.tex}
 \clearpage
-%\input{software-engineering.tex}
+\input{software-engineering.tex}
 \clearpage
-%\input{related-work.tex}
+\input{related-work.tex}
 \clearpage
-%\input{velocity.tex}
+\input{velocity.tex}
 \clearpage
-%\input{evaluation.tex}
+\input{evaluation.tex}
 \clearpage
 %\input{conclusion.tex}
 \clearpage
-%\input{bibliography.tex}
+\input{bibliography.tex}
 \clearpage
 %\input{list-of-figures.tex}
 \clearpage
@@ -221,6 +221,6 @@
 \clearpage
 %\input{list-of-tables.tex}
 \clearpage
-%\input{appendices.tex}
+\input{appendices.tex}
 
 \end{document}
