--- a/paper/evaluation/data-collection/travis.tex
+++ b/paper/evaluation/data-collection/travis.tex
@@ -7,14 +7,14 @@ We can answer the first three research questions by analysing data from projects
 
 \begin{figure}[htbp!]
 	\centering
-	\input{assets/tikz/eval-rq1-mapreduce.tex}
+	\includegraphics[width=\textwidth]{assets/tikz/eval-rq1-mapreduce.tikz}
 	\caption{MapReduce pipeline to find the amount of failed test runs.}
 	\label{fig:eval-mapreduce-1}
 \end{figure}
 
 \begin{figure}[htbp!]
 	\centering
-	\input{assets/tikz/eval-rq2-mapreduce.tex}
+	\includegraphics[width=\textwidth]{assets/tikz/eval-rq2-mapreduce.tikz}
 	\caption{MapReduce pipeline to find the average duration of a successful test run.}
 	\label{fig:eval-mapreduce-2}
 \end{figure}
