--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -1,16 +1,15 @@
 % !TeX root = thesis.tex
 
-WIJ-ificeren!!!!!!!!!!!!!!!!!!!!!
-
 \chapter{Related work}
 \label{ch:related-work}
-The previous chapter has stressed the paramount importance of frequently integrating one's changes into the upstream repository. This process can be a complex and lengthy operation. As a result, software engineers have sought and found ways to automate this task. These solutions and practices embody \acrfull{ci}. However, \acrshort{ci} is not the golden bullet for software engineering, as there is a flip side to applying this practice. After every integration, the entire test suite must be executed to ensure that no regression has been introduced. As the project evolves and the size of the codebase increases, the number of test cases will increase accordingly to preserve a sufficiently high coverage level \cite{evaluationoftestsuiteminimization}. Walcott, Soffa and Kapfhammer illustrate the magnitude of this problem by providing an example of a project consisting of \SI{20000}{} lines of code. The test suite of this project requires up to seven weeks to complete \cite{10.1145/1146238.1146240}.\\
 
-TODO DEZE PARAGRAAF
-\noindent Fortunately, multiple developers and researchers have found some techniques that can be used to address the scalability issues of growing test suites. The techniques currently known to literature can be classified in three categories. Developers can either apply \emph{\tsm{}}, \emph{\tcs{}} or \emph{\tcp{}} \cite{evaluationoftestsuiteminimization}. All three techniques are applicable to any test suite, however there is a trade-off to be made. Depending on which technique is chosen, it will either have a major impact on the duration of the test suite execution in exchange for a reduced test coverage level, or it will result in a higher test adequacy.\\
+In the previous chapter, we have stressed the paramount importance of frequently integrating one's changes into the upstream repository. This process can prove to be a complex and lengthy operation. As a result, software engineers have sought and found ways to automate this task. These solutions and practices embody \acrfull{ci}. However, \acrshort{ci} is not the golden bullet for software engineering, as there is a flip side to applying this practice. After every integration, we must execute the entire test suite to ensure that we have not introduced any regressions. As the project evolves and the size of the codebase increases, the number of test cases will increase accordingly to preserve a sufficiently high coverage level \cite{evaluationoftestsuiteminimization}. Walcott, Soffa and Kapfhammer illustrate the magnitude of this problem by providing an example of a project consisting of $\SI{20000}{}$ lines of code, whose test suite requires up to seven weeks to complete \cite{10.1145/1146238.1146240}.\\
 
-\noindent The following sections will discuss these three approaches in more detail and provide accompanying algorithms. Because the techniques are very similar, the corresponding algorithms can (albeit with minor modifications) be used interchangeably for every approach. The final section of this chapter will investigate the adoption and integration of these techniques in modern software testing frameworks.
+\noindent Fortunately, developers and researchers have found multiple techniques to address the scalability issues of ever-growing test suites. We can classify the techniques currently known in literature into three categories \cite{evaluationoftestsuiteminimization}. These categories are \acrfull{tsm}, \acrfull{tcs} or \acrfull{tcp}. We can apply each technique to every test suite, but the outcome will be different. \acrshort{tsm} and \acrshort{tcs} will have an impact on the execution time of the test suite, at the cost of a reduced test coverage level. In contrast, \acrshort{tcp} will have a weaker impact on the execution time but will not affect the test adequacy.\\
 
+\noindent The following sections will discuss these three approaches in more detail and provide accompanying algorithms. Because the techniques are very similar, the corresponding algorithms can (albeit with minor modifications) be used interchangeably for every approach. The final section of this chapter will investigate the adoption and integration of these techniques in modern software testing frameworks.\\
+
+\clearpage
 \input{related-work/approaches.tex}
 \newpage
 \input{related-work/algorithms.tex}
