--- a/paper/related-work/approaches/tsm.tex
+++ b/paper/related-work/approaches/tsm.tex
@@ -2,18 +2,20 @@
 
 \subsection{\tsm{}}
 \label{ssec:tsm}
-\tsm{}, also referred to as \emph{Test Suite Reduction}, aims to reduce the size of the test suite by permanently removing redundant tests. This problem is formally defined by Rothermel in \autoref{def:tsm} \cite{10.1002/stv.430} and illustrated in \autoref{fig:tsm}. 
+The first technique is called \acrlong{tsm}, also referred to as \emph{Test Suite Reduction} in literature. This technique will try to reduce the size of the test suite by permanently removing redundant test cases. This problem has been formally defined by Rothermel in \cref{def:tsm} \cite{10.1002/stv.430} and illustrated in \Cref{fig:tsm}.
+
+ALLES HIERONDER NOG DOEN
 
 \begin{definition}[\tsm{}]
 \label{def:tsm}
 \mbox{}\\Given:
 \begin{itemize}
-	\item $T = \{t_1, \dots, t_n\}$ a test suite consisting of tests $t_j$.
+	\item $T = \{t_1, \dots, t_n\}$ a test suite consisting of test cases $t_i$.
 	\item $R = \{r_1, \dots, r_n\}$ a set of requirements that must be satisfied in order to provide the desired ``adequate'' testing of the program.
-	\item $\{T_1, \dots, T_n\} \subseteq T$ subsets of test cases, one associated with each of the requirements $r_i$, such that any one of the test cases $t_j \in T_i$ can be used to satisfy requirement $r_i$.
+	\item $G = \{T_1, \dots, T_n\} \subseteq T$ subsets of test cases, one associated with each of the requirements $r_i$, such that any one of the test cases $t_j \in T_i$ can be used to satisfy requirement $r_i$.
 \end{itemize}
 
-\noindent \tsm{} is then defined as the task of finding a set $T'$ of test cases $t_j \in T$ that satisfies all requirements $r_i$.
+\noindent \tsm{} is then defined as the task of finding a subsetset $T'$ of test cases $t_j \in T$ that satisfies all requirements $r_i$.
 \end{definition}
 
 
